Fix win effect
- Fix overflow (unwanted scrollbars)
- When switching from module to plain script in 76553548729ff4799aad316bbfac349ac7710852, it changed which `win` function was exported globally. Simplify to one win() function to avoid this.

--- a/programs/js-solitaire/src/solitaire.css
+++ b/programs/js-solitaire/src/solitaire.css
@@ -25,6 +25,7 @@ body,
     height: 100%;
     background-color: green;
     position: relative;
+    overflow: hidden; /* important for win effect */
 }
 
 .card {
